# GeneralsGameCode

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  typos.toml  vcpkg.json
Core/Libraries/Source/DataChunk/: CMakeLists.txt  DataChunkInput.cpp  DataChunkOutput.cpp  TableOfContents.cpp
Core/Tools/: CMakeLists.txt
Core/Tools/Autorun/: ARGS.cpp  CDCNTRL.cpp  DrawButton.cpp  EZGIMEX.cpp  GETCD.cpp  IGR.cpp  Jsupport.cpp  Locale_API.cpp  RECT.h  TTFont.cpp  TTFont.h  Utils.cpp  ViewHTML.cpp  WSYS_FileSystem.h  WSYS_RAMFile.cpp  WSYS_file.h  WinFix.cpp  Wnd_file.cpp  autorun.cpp  autorun.h  locale.cpp
Core/Tools/Babylon/: BabylonDlg.cpp  BabylonDlg.ui  BabylonDlg_Qt.cpp  BabylonDlg_Qt.h  Babylon_Qt.cpp  Babylon_Qt.h  CMakeLists.txt  ExportDlg.cpp  ExportDlg.ui  ExportDlg_Qt.cpp  ExportDlg_Qt.h  GenerateDlg_Qt.cpp  GenerateDlg_Qt.h  MatchDlg.cpp  MatchDlg_Qt.cpp  MatchDlg_Qt.h  PlatformTypes.h  ProceedDlg_Qt.cpp  ProceedDlg_Qt.h  Report.cpp  Report_Qt.cpp  Report_Qt.h  RetranslateDlg_Qt.cpp  RetranslateDlg_Qt.h  TransDB.cpp  TransDB.h  VIEWDBSII_Qt.cpp  VIEWDBSII_Qt.h  VerifyDlg.cpp  VerifyDlg_Qt.cpp  VerifyDlg_Qt.h  VerifyTextDlg_Qt.cpp  VerifyTextDlg_Qt.h  XLStuff.cpp  XLStuff.h  bin.cpp  bin.h  excel8.cpp  expimp.cpp  expimp.h  (+7 more)
Core/Tools/CRCDiff/: CRCDiff.cpp
Core/Tools/DataChunkConverter/: CMakeLists.txt  DataChunkConverter.cpp
Core/Tools/DebugWindow/: CMakeLists.txt  DebugWindow.cpp  DebugWindowDialog.cpp  DebugWindowDialog.ui  DebugWindowDialog_Qt.cpp  DebugWindowDialog_Qt.h  DebugWindowExport.h  DebugWindow_Qt.cpp  DebugWindow_Qt.h
Core/Tools/ImagePacker/Source/: ImageInfo.cpp  ImagePacker.cpp  TexturePage.cpp
Core/Tools/Launcher/: BFISH.cpp  findpatch.cpp  loadbmp.cpp  main.cpp  monod.cpp  patch.cpp  process.cpp  wdebug.h  wstring.cpp  wstypes.h
Core/Tools/Launcher/DatGen/: DatGen.cpp
Core/Tools/MapCacheBuilder/Source/: WinMain.cpp
Core/Tools/PATCHGET/: CHATAPI.cpp  CMakeLists.txt  COMINIT.cpp  PROCESS.cpp  WINBLOWS.cpp  debug.cpp  registry.cpp
Core/Tools/ParticleEditor/: CColorAlphaDialog.h  CMakeLists.txt  CParticleEditorPage.h  CSwitchesDialog.h  ParticleEditor.cpp  ParticleEditor.rc  ParticleEditorDialog.cpp  ParticleTypePanels.cpp
Core/Tools/ScriptCompiler/: CMakeLists.txt  ScriptCompiler.cpp
Core/Tools/ScriptConverter/: CMakeLists.txt  run_tests.sh
Core/Tools/ScriptConverter/Source/: Main.cpp
Core/Tools/SemanticScriptConverter/: CMakeLists.txt
Core/Tools/SemanticScriptConverter/Source/: Main.cpp
Core/Tools/W3DView/: AddToLineupDialog.cpp  AddToLineupDialog_Qt.cpp  AddToLineupDialog_Qt.h  AdvancedAnimSheet.cpp  AdvancedAnimSheet.h  AdvancedAnimSheet_Qt.cpp  AdvancedAnimSheet_Qt.h  AggregateNameDialog_Qt.cpp  AggregateNameDialog_Qt.h  AmbientLightDialog.cpp  AmbientLightDialog_Qt.cpp  AmbientLightDialog_Qt.h  AnimatedSoundOptionsDialog.cpp  AnimatedSoundOptionsDialog_Qt.cpp  AnimatedSoundOptionsDialog_Qt.h  AnimationPropPage_Qt.cpp  AnimationPropPage_Qt.h  AnimationSpeed.cpp  AnimationSpeed_Qt.cpp  AnimationSpeed_Qt.h  AssetInfo.cpp  AssetInfo.h  AssetPropertySheet_Qt.cpp  AssetPropertySheet_Qt.h  BackgroundBMPDialog.cpp  BackgroundBMPDialog_Qt.cpp  BackgroundBMPDialog_Qt.h  BackgroundColorDialog.cpp  BackgroundColorDialog_Qt.cpp  BackgroundColorDialog_Qt.h  BackgroundObjectDialog.cpp  BackgroundObjectDialog_Qt.cpp  BackgroundObjectDialog_Qt.h  BoneMgrDialog.cpp  BoneMgrDialog_Qt.cpp  BoneMgrDialog_Qt.h  CMakeLists.txt  CameraDistanceDialog.cpp  CameraDistanceDialog_Qt.cpp  CameraDistanceDialog_Qt.h  (+118 more)
Core/Tools/WW3D/max2w3d/: AlphaModifier.cpp  ExportAllDlg.cpp  FormClass.cpp  GameMtl.cpp  GameMtlPassDlg.cpp  InputDlg.cpp  MeshDeform.cpp  MeshDeform.h  MeshDeformPanel.cpp  MeshDeformSave.cpp  MeshDeformSave.h  MeshDeformSaveSet.h  MeshDeformSet.cpp  MeshDeformSet.h  SceneSetupDlg.cpp  SkinCopy.cpp  TARGA.cpp  aabtreebuilder.cpp  aabtreebuilder.h  bchannel.h  bpick.h  colboxsave.cpp  dllmain.cpp  floaterdialog.cpp  genlodextensiondialog.cpp  genmtlnamesdialog.cpp  gennamesdialog.cpp  geometryexportcontext.h  geometryexporttask.cpp  gridsnapmodifier.cpp  hiersave.cpp  hiersave.h  hlodsave.cpp  logdlg.cpp  meshbuild.cpp  meshcon.h  meshsave.cpp  meshsave.h  motion.cpp  motion.h  (+12 more)
Core/Tools/WW3D/pluglib/: CMakeLists.txt  EULER.cpp  Vector.cpp  Vector.h  always.h  errclass.h  rawfile.cpp  rawfile.h  vector2.h  vector3.h  w3dquat.h  win.h  wwfile.h
Core/Tools/WorldBuilder/: CMakeLists.txt
Core/Tools/WorldBuilder/include/: BorderTool.h  CUndoable.h  CameraOptions.h  DrawObject.h  EditCondition.h  LayersList.h  MainFrm.h  ScriptDialog.h  WBHeightMap.h  WHeightMapEdit.h  WorldBuilder.h  mapobjectprops.h  wbview.h  wbview3d.h
Core/Tools/WorldBuilder/res/: resource.h
Core/Tools/WorldBuilder/src/: BorderTool.cpp  CUndoable.cpp  CameraOptions.cpp  DrawObject.cpp  EditAction.cpp  EditCondition.cpp  EditObjectParameter.cpp  LayersList.cpp  MainFrm.cpp  ScriptActionsFalse.cpp  ScriptActionsTrue.cpp  ScriptConditions.cpp  ScriptDialog.cpp  WHeightMapEdit.cpp  WorldBuilder.cpp  mapobjectprops.cpp  teamsdialog.cpp  wbview.cpp  wbview3d.cpp
Core/Tools/buildVersionUpdate/: buildVersionUpdate.cpp
Core/Tools/mangler/: manglertest.cpp
Core/Tools/matchbot/: encrypt.cpp  generals.cpp  matcher.cpp  mydebug.cpp
Core/Tools/textureCompress/: textureCompress.cpp
Core/Tools/versionUpdate/: versionUpdate.cpp
Core/Tools/w3dconvert/: CMakeLists.txt  README.md  chunkserializer.cpp  chunkserializer.h  jsonreader.cpp  jsonreader.h  jsonwriter.cpp  jsonwriter.h  w3dconvert.cpp  xmlreader.cpp  xmlreader.h  xmlwriter.cpp  xmlwriter.h
Core/Tools/wolSetup/: verchk.cpp  wolInit.cpp  wolSetup.cpp
Generals/: CMakeLists.txt
Generals/Code/GameEngine/: CMakeLists.txt
Generals/Code/GameEngineDevice/: CMakeLists.txt
Generals/Code/Main/: WinMain.cpp
Generals/Code/Tools/: CMakeLists.txt
GeneralsMD/: CMakeLists.txt
GeneralsMD/Code/GameEngine/: CMakeLists.txt
GeneralsMD/Code/GameEngineDevice/: CMakeLists.txt
GeneralsMD/Code/Main/: WinMain.cpp
GeneralsMD/Code/Tools/: CMakeLists.txt
GeneralsMD/Run/shaders/: brightness.pso
cmake/: qt.cmake  (+3 more)
(+1436 files in other folders)
